src/objects/Portfolio__c.object
<CustomObject>
    <description>Portfolio&apos;s are a summary of all work for a particular type of IT services.  For example, &quot;2009 infrastructure improvements&quot; which would include &quot;upgrade laptops&quot;  or &quot;FY09 Business Applications Upgrade&quot; which might include &quot;New CRM system&quot; or &quot;New ERP reporting solution&quot;.</description>
    <fields>
        <fullName>PortfolioGoals__c</fullName>
        <label>Portfolio Goals</label>
        <picklist>
            <picklistValues>
                <fullName>Graduate Students</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operational Excellence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employer of Choice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Keep the Lights On/Regulatory</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>PortfolioType__c</fullName>
        <label>Investment Nature</label>
        <picklist>
            <picklistValues>
                <fullName>Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Discretionary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discretionary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Growth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Venture</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Portfolio_Long_Description__c</fullName>
        <label>Portfolio Long Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TotalCost__c</fullName>
        <label>Total Cost</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Portfolio</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Portfolio Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Portfolios</pluralLabel>
    <recordTypes>
        <fullName>AcademicServices</fullName>
        <active>true</active>
        <description>Portfolio for Academic Services</description>
        <label>Academic Services</label>
    </recordTypes>
    <recordTypes>
        <fullName>IT</fullName>
        <active>true</active>
        <description>IT Project</description>
        <label>IT</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>